--- a/style.css
+++ b/style.css
@@ -67,6 +67,165 @@
     font-size: 18px;
 }
 
+.header-page {
+    width: 100%;
+    padding: 40px 240px;
+    min-height: 50px;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+
+}
+
+.header-page-left {
+    width: 50%;
+}
+
+.header-page-right {
+    width: 50%;
+}
+
+.header-page-title {
+    color: #0B0223;
+    text-align: center;
+    font-family: Work Sans;
+    font-size: 48px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    text-transform: uppercase;
+}
+
+.header-page-title-2 {
+    text-align: center;
+    font-family: Work Sans;
+    font-size: 95px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+    text-transform: uppercase;
+    background: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.header-page-txt {
+    color: #534C64;
+    font-family: Work Sans;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    text-transform: lowercase;
+    display: flex;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+}
+
+.header-page-button-div {
+    gap: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+}
+
+.btn-1 {
+    display: inline-flex;
+    padding: 21px 40px;
+    align-items: flex-start;
+    gap: 10px;
+    border-radius: 48px;
+    background: var(--linear, linear-gradient(90deg, #FF42A5 0%, #FF42A5 100%));
+    border: none;
+    color: #FFF;
+    font-family: Work Sans;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    text-transform: uppercase;
+}
+
+.btn-2 {
+    display: inline-flex;
+    padding: 21px 40px;
+    align-items: flex-start;
+    gap: 10px;
+    border-radius: 48px;
+    border: none;
+    border-radius: 48px;
+    background: #4EC5F7;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    text-transform: uppercase;
+    color: white;
+}
+
+/* main items */
+
+.online-games {
+    width: 100%;
+    padding: 40px 240px;
+    min-height: 50px;
+    margin: 0 auto;
+}
+
+.online-games-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    padding: 20px;
+}
+
+.online-games-title {
+    color: #0B0223;
+    font-family: Work Sans;
+    font-size: 30px;
+    font-style: normal;
+    line-height: normal;
+    text-align: center;
+    padding: 20px;
+}
+
+.online-games-para {
+    text-align: center;
+    padding: 20px;
+}
+
+.box {
+    width: 342px;
+    height: 500px;
+    flex-shrink: 0;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+}
+
+.online-game-title-style {
+    background: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+.online-games-container {
+    display: flex;
+   margin: 0 auto;
+    
+    
+
+
+}
+.online-games-containt-img{
+    width: 100%;
+}
+
 
 
 /* view */
@@ -74,13 +233,14 @@
 @media screen and (max-width: 990px) {
 
     .header,
+    .header-page,
     .header-div-2 {
         display: flex;
         padding: 20px 20px;
         align-items: center;
         justify-content: center;
         text-align: center;
-       
+
     }
 }
 
@@ -88,16 +248,104 @@
 @media screen and (max-width: 425px) {
 
     .header,
-    .header-div-2 {
+    .header-page,
+    .header-div-2,.online-games,.online-games-container{
         flex-direction: column;
         padding: 20px 20px;
         align-items: center;
         justify-content: center;
         text-align: center;
         width: 70%;
-       
+
 
     }
 
-}
+    .header-page-left {
+        width: 100%;
+    }
 
+
+    .header-page-txt {
+
+
+        font-size: 20px;
+        font-style: normal;
+        line-height: normal;
+        text-transform: lowercase;
+        display: flex;
+        text-align: center;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .header-page-title-2 {
+        text-align: center;
+        font-size: 25px;
+        font-style: normal;
+        line-height: normal;
+        text-transform: uppercase;
+        background: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
+        background-clip: text;
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+    }
+
+    .header-image {
+        width: 100%;
+        display: flex;
+        align-items: center;
+    }
+
+    .header-page-title {
+        color: #0B0223;
+        text-align: center;
+        font-size: 15px;
+        font-style: normal;
+        line-height: normal;
+        text-transform: uppercase;
+    }
+
+    .header-page-txt {
+        font-size: 10px;
+        font-style: normal;
+        line-height: normal;
+        text-transform: lowercase;
+        display: flex;
+        text-align: center;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .btn-1,
+    .btn-2,
+    .header-page-button-div {
+        display: inline-flex;
+        padding: 5px 10px;
+        align-items: flex-start;
+        gap: 10px;
+        border-radius: 20px;
+        background: var(linear-gradient(90deg, #FF42A5 0%, #FF42A5 100%));
+        border: none;
+        color: #FFF;
+        font-family: Work Sans;
+        font-size: 5px;
+        font-style: normal;
+
+        line-height: normal;
+        text-transform: uppercase;
+    }
+    
+    .online-games-containt-img{
+       width: 80%;
+    }
+    .online-games-container{
+       
+       
+    }
+    .box{
+        height: 300px;
+        width: 200px;
+    }
+    
+    
+}
