--- a/style.css
+++ b/style.css
@@ -214,19 +214,81 @@
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
+
 .online-games-container {
     display: flex;
-   margin: 0 auto;
-    
-    
+    margin: 0 auto;
+
+
 
 
 }
-.online-games-containt-img{
+
+.online-games-containt-img {
     width: 100%;
 }
 
+.play-games {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    padding: 40px 240px;
+    min-height: 50px;
+    margin: 0 auto;
+}
+.play-games-left {
+    width: 50%;
+    padding-left: 20px;
 
+}
+
+.play-games-right {
+    width: 50%;
+    padding: 0px;
+
+}
+
+.play-games-heading {
+    text-align: left;
+    font-size: 48px;
+    font-style: normal;
+
+}
+
+.play-games-para {
+    color: #534C64;
+    text-align: left;
+    font-size: 18px;
+    font-style: normal;
+    
+
+
+}
+
+.play-games-img1 {
+    width: 550px;
+    height: 500px;
+    flex-shrink: 0;
+    border-radius: 8px;
+    background: url(<path-to-image>), lightgray -7.583px 0px / 102.389% 100% no-repeat;
+    position: relative;
+}
+
+.play-games-img2 {
+    width: 280.5px;
+    height: 300.083px;
+    flex-shrink: 0;
+    border-radius: 5px;
+    border: 5px solid #FFF;
+    background: url(<path-to-image>), lightgray 0px -0.304px / 100% 117.229% no-repeat;
+    
+    position: relative;
+    top: -200px;
+    right: 200px;
+}
+
+/* ------------------------------------------------------------------------------------- */
 
 /* view */
 
@@ -249,7 +311,9 @@
 
     .header,
     .header-page,
-    .header-div-2,.online-games,.online-games-container{
+    .header-div-2,
+    .online-games,
+    .online-games-container,.play-games {
         flex-direction: column;
         padding: 20px 20px;
         align-items: center;
@@ -334,18 +398,43 @@
         line-height: normal;
         text-transform: uppercase;
     }
-    
-    .online-games-containt-img{
-       width: 80%;
+
+    .online-games-containt-img {
+        width: 80%;
     }
-    .online-games-container{
-       
-       
-    }
-    .box{
+
+    .online-games-container {}
+
+    .box {
         height: 300px;
         width: 200px;
     }
-    
-    
+    .play-games-heading{
+        font-size: 20px;
+        text-align: center;
+        justify-content: center;
+        padding-bottom: 10px;
+    }
+    .play-games-para{
+        font-size: 15px;
+        text-align: center;
+        /* justify-content: center; */
+        padding-bottom: 10px;
+    }
+    .play-games-right{
+        width: 100%;
+    }
+    .play-games-img1{
+        width: 80%;
+        height: 300px;
+    }
+    .play-games-img2{
+        height: 160px;
+        width: 150px;
+        top: -100px;
+        left: -70px;
+        border: none;
+    }
+
+
 }
